--- a/main/client/themes/tumenshuvuut/submission_detail_content.html
+++ b/main/client/themes/tumenshuvuut/submission_detail_content.html
@@ -9,13 +9,13 @@
                             <button type="button" class="print" onClick="window.print()"><span
                                     class="glyphicon glyphicon-print"></span> Хэвлэх</button>
                         </li>
-                        <li  class="no-border ml-10">
+                        <li  class="no-border" style="margin-left: 10px;">
                             <a id="buttonBack" href="/forms/submission-list/{{ formId }}"bo
                                 class="pull-left btn btn-primary" style="padding: 2px 10px;">
                                 <span class="glyphicon glyphicon-arrow-left"></span>
                                 Буцах
                             </a>
-                        </li>
+                        </li> 
                     </ul>
                 </div>
             </div>
@@ -159,7 +159,7 @@
                     </table>
                 </div>
             </div>
-            <div id="education" class="panel panel-default apu-panel">
+            <div id="experience" class="panel panel-default apu-panel">
                 <div class="panel apu-panel-header">
                     <p class="apu-panel-title">Ажлын туршлага</p>
                 </div>
