--- a/main/client/themes/tumenshuvuut/submission_detail_content.html
+++ b/main/client/themes/tumenshuvuut/submission_detail_content.html
@@ -10,7 +10,7 @@
                                     class="glyphicon glyphicon-print"></span> Хэвлэх</button>
                         </li>
                         <li  class="no-border" style="margin-left: 10px;">
-                            <a id="buttonBack" href="/forms/submission-list/{{ formId }}"bo
+                            <a id="buttonBack" href="/forms/submission-list/{{ formId }}"
                                 class="pull-left btn btn-primary" style="padding: 2px 10px;">
                                 <span class="glyphicon glyphicon-arrow-left"></span>
                                 Буцах
