--- a/main/client/themes/tumenshuvuut/submission_detail_content.html
+++ b/main/client/themes/tumenshuvuut/submission_detail_content.html
@@ -6,7 +6,7 @@
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-left nav-left">
                         <li class="no-border">
-                            <button type="button" class="print" onClick="window.print()"><span
+                            <button type="button" class="print btn-print" onClick="window.print()"><span
                                     class="glyphicon glyphicon-print"></span> Хэвлэх</button>
                         </li>
                         <li  class="no-border" style="margin-left: 10px;">
