--- a/main/client/themes/tumenshuvuut/submission_detail_content.html
+++ b/main/client/themes/tumenshuvuut/submission_detail_content.html
@@ -11,7 +11,7 @@
                         </li>
                         <li  class="no-border" style="margin-left: 10px;">
                             <a id="buttonBack" href="/forms/submission-list/{{ formId }}"
-                                class="pull-left btn btn-primary" style="padding: 2px 10px;">
+                                class="pull-left btn btn-primary">
                                 <span class="glyphicon glyphicon-arrow-left"></span>
                                 Буцах
                             </a>
