--- a/main/client/themes/tumenshuvuut/submission_detail_content.html
+++ b/main/client/themes/tumenshuvuut/submission_detail_content.html
@@ -53,15 +53,14 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td><span>Гар утас:</span>{{ phone }}</td>
-                                <td><span>Утас /гэрийн/:</span>{{ homePhone }}</td>
-                                <td><span>И-мэйл:</span>{{ email }}</td>
-                            </tr>
-                            <tr>
                                 <td><span>Регистерийн дугаар:</span>{{ register }}</td>
                                 <td><span>Төрсөн огноо:</span>{{ birthDate }}</td>
                                 <td><span>Хүйс:</span>
                                     {{ gender }}</td>
+                            </tr>
+                            <tr>
+                                <td><span>Гар утас:</span>{{ phone }}</td>
+                                <td><span colspan="2">И-мэйл:</span>{{ email }}</td>
                             </tr>
                             <tr>
                                 <td><span>Оршин суугаа хаяг: </span>{{ address }}</td>
