--- a/main/client/themes/tumenshuvuut/submission_detail_content.html
+++ b/main/client/themes/tumenshuvuut/submission_detail_content.html
@@ -36,7 +36,7 @@
                         <tbody>
                             <tr>
                                 <td rowspan="6" style="width: 160px;">
-                                    <span>Цээж зураг</span>
+                                    <span style="margin-bottom: 10px;">Цээж зураг</span>
                                     <img style="width: 150px;" target="_blank" src="{{ portrait }}" class="img" />
                                 </td>
                                 <td>
@@ -60,16 +60,16 @@
                             </tr>
                             <tr>
                                 <td><span>Гар утас:</span>{{ phone }}</td>
-                                <td><span colspan="2">И-мэйл:</span>{{ email }}</td>
-                            </tr>
-                            <tr>
+                                <td><span>И-мэйл:</span>{{ email }}</td>
                                 <td><span>Оршин суугаа хаяг: </span>{{ address }}</td>
-                                <td colspan="2"><span>Ам бүлийн тоо:</span>{{ members }}</td>
                             </tr>
                             <tr>
-                                <td><span>Яаралтай үед холбоо барих хүний нэр:</span>{{ contactName }}</td>
-                                <td><span>Яаралтай үед холбоо барих хүний дугаар:</span>{{ contactPhone }}</td>
+                                <td><span>Ам бүлийн тоо:</span>{{ members }}</td>
+                                <td colspan="2"><span>Яаралтай үед холбоо барих хүний нэр:</span>{{ contactName }}</td>
+                            </tr>
+                            <tr>
                                 <td><span>Хэн болох:</span>{{ contactMember }}</td>
+                                <td colspan="2"><span>Яаралтай үед холбоо барих хүний дугаар:</span>{{ contactPhone }}</td>
                             </tr>
                         </tbody>
                     </table>
